--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
             <version>4.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version> 6.2.3.Final</version>
+        </dependency>
+
+
 
 
 
