--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.2.15</version>
+        </dependency>
 
 
 
